- Fixed security issue in imagerotate(), background colour isn't validated
  correctly with a non truecolour image. Reported by Hamid Ebadi,
  APA Laboratory (Fixes CVE-2008-5498). (Scott)
- Fixed a segfault when malformed string is passed to json_decode(). (Scott)
- Fixed bug in xml_error_string() which resulted in messages being
  off by one. (Scott)

- Fixed bug #47042 (PHP cgi sapi is removing SCRIPT_FILENAME for non apache).
  (Sriram Natarajan)
- Fixed bug #47037 (No error when using fopen with empty string). 
  (Cristian Rodriguez R., Felipe)
- Fixed bug #47035 (dns_get_record returns a garbage byte at the end of a TXT 
  record). (Felipe)
- Fixed bug #47027 (var_export doesn't show numeric indices on ArrayObject).
  (Derick)
- Fixed bug #46985 (OVERWRITE and binary mode does not work, regression introduced in
  5.2.8). (Pierre)
- Fixed bug #46973 (IPv6 address filter rejects valid address). (Felipe)
- Fixed bug #46964 (Fixed pdo_mysql build with older version of MySQL). (Ilia)
- Fixed bug #46959 (Unable to disable PCRE). (Scott)
- Fixed bug #46918 (imap_rfc822_parse_adrlist host part not filled in correctly).
  (Felipe)
- Fixed bug #46889 (Memory leak in strtotime()). (Derick)
- Fixed bug #46887 (Invalid calls to php_error_docref()).
  (oeriksson at mandriva dot com, Ilia)
- Fixed bug #46873 (extract($foo) crashes if $foo['foo'] exists). (Arnaud)
- Fixed bug #46798 (Crash in mssql extension when retrieving a NULL value
  inside a binary or image column type). (Ilia)
- Fixed bug #46782 (fastcgi.c parse error). (Matt)
- Fixed bug #46760 (SoapClient doRequest fails when proxy is used). (Felipe)
- Fixed bug #46748 (Segfault when an SSL error has more than one error). (Scott)
- Fixed bug #46739 (array returned by curl_getinfo should contain content_type key). 
  (Mikko)
- Fixed bug #46701 (Creating associative array with long values in the key fails
  on 32bit linux). (Shire)
- Fixed bug #46699 (xml_parse crash when parser is namespace aware). (Rob)